# static-http-file

./: Cargo.toml
assets/pixel/: pixel.avif  pixel.eps  pixel.heic  pixel.ps  pixel.tif
src/: cachebusted_http_file.rs  const_b64.rs  const_etag.rs  const_http_file.rs  const_mime.rs  http_02.rs  http_1.rs  lib.rs  shared_http_file.rs  test.rs  traits.rs  urlencode.rs
src/expose/: exposed_directory.rs  mod.rs
src/std/: mod.rs  std_http_file.rs
src/tokio_1/: mod.rs  tokio_http_file.rs
tests/: mime_detect.rs
