[package]
name = "static-http-file"
version = "0.1.0"
edition = "2021"
rust-version = "1.70.0"
license = "MIT OR LGPL-3.0-or-later"
description = "A library for handling static files as http::Response, including const fn support."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
http = "0.2.9"
xxhash-rust = { version = "0.8.6", features = ["const_xxh3"] }
bytedata = { version = "0.1.0", git = "https://github.com/TimLuq/bytedata.git", features = ["alloc"] }
bytes_1 = { package = "bytes", version = "^1.2", optional = true }
tokio_1 = { package = "tokio", version = "^1.20", optional = true, features = ["io-util", "fs", "parking_lot"] }
notify = { package = "notify", version = "^6.0", optional = true }
regex = { version = "^1.5", optional = true }
parking_lot = { package = "parking_lot", version = "0.12.1", optional = true }

[features]
default = []
std = ["dep:bytes_1", "xxhash-rust/xxh3", "bytedata/bytes_1"]
tokio_1 = ["dep:tokio_1", "std"]
expose = ["dep:notify", "std", "dep:regex", "dep:parking_lot"]
